--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watch"
   },
   "dependencies": {
     "dayjs": "^1.11.7",
     "expo": "~48.0.9",
+    "expo-screen-orientation": "~5.1.1",
     "expo-status-bar": "~1.4.4",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.4",
-    "expo-screen-orientation": "~5.1.1"
+    "react-native": "0.71.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.0.1",
+    "@types/jest": "^29.5.0",
     "@types/react": "~18.0.14",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "eslint": "^8.36.0",
